--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <title>Alura Plus</title>
 </head>
 <body>
-    <header class="background">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    </header>
-    <main></main>
-    <footer></footer>
+    <section class="container background">
+        <div>
+            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="/img/Combo.png" alt="imagem de combo">
+            <a class="container__botao" href="www.alura.com.br">Assine por 12x de R$ 120,00*</a>
+            <a class="container__botao botao_secundario" href="www.alura.com.br">Assinar somente o Alura+</a>
+            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
 </body>
 </html>
