--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
 <body>
     <section class="container background">
         <div>
-            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
             <img src="/img/Combo.png" alt="imagem de combo">
             <a class="container__botao" href="www.alura.com.br">Assine por 12x de R$ 120,00*</a>
             <a class="container__botao botao_secundario" href="www.alura.com.br">Assinar somente o Alura+</a>
