--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
+    <section class="container secundario">
+        <img src="./img/plataformas.png" alt="Um monitor um celular com alura plus aberto" class="secundario__imagem">
+        <div class="container__descritorio">
+            <h2 class="descricao__titulo">
+                Assita do seu jeito
+            </h2>
+            <p class="descricao__texto">
+                Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
