--- a/index.html
+++ b/index.html
@@ -30,5 +30,16 @@
             </p>
         </div>
     </section>
+    <section class="container terciario">
+        <div class="container__descritorio">
+            <p class="descricao__texto">
+                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.
+            </p>
+            <a href="#" class="descricao__link">
+                Assine o Combo+
+            </a>
+        </div>
+        <img src="./img/Telas.png" alt="telas com o site alura" class="terciario__imagem">
+    </section>
 </body>
 </html>
