--- a/index.html
+++ b/index.html
@@ -41,5 +41,31 @@
         </div>
         <img src="./img/Telas.png" alt="telas com o site alura" class="terciario__imagem">
     </section>
+    <section class="container secundario">
+        <img src="./img/Notebook.png" alt="notebook com o site da alura" class="secundario__imagem">
+        <div class="container__descritorio">
+            <h2 class="descricao__titulo">
+                Baixe seus cursos
+            </h2>
+            <p class="descricao__texto">
+                Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+    <section class="container">
+        <h1 class="container__titulo"></h1>
+        <div class="container__telas">
+            <img src="./img/tv.png" alt="icone de tv" class="telas">
+            <p class="telas__titulo">TV</p>
+        </div>
+        <div class="container__telas">
+            <img src="./img/computador.png" alt="icone de computador" class="telas">
+            <p class="telas__titulo">Computadores</p>
+        </div>
+        <div class="container__telas">
+            <img src="./img/celular.png" alt="icone de celular" class="telas">
+            <p class="telas__titulo">Celulares e tablets</p>
+        </div>
+    </section>
 </body>
 </html>
