--- a/index.html
+++ b/index.html
@@ -52,19 +52,21 @@
             </p>
         </div>
     </section>
-    <section class="container">
-        <h1 class="container__titulo"></h1>
-        <div class="container__telas">
-            <img src="./img/tv.png" alt="icone de tv" class="telas">
-            <p class="telas__titulo">TV</p>
-        </div>
-        <div class="container__telas">
-            <img src="./img/computador.png" alt="icone de computador" class="telas">
-            <p class="telas__titulo">Computadores</p>
-        </div>
-        <div class="container__telas">
-            <img src="./img/celular.png" alt="icone de celular" class="telas">
-            <p class="telas__titulo">Celulares e tablets</p>
+    <section class="container__telas">
+        <h1 class="telas__titulo">Disponível nos seus dispositivos favoritos</h1>
+        <div class="telas__grupo">
+            <div class="telas__icon">
+                <img src="./img/tv.png" alt="icone de tv" class="telas">
+                <p class="telas__titulo">TV</p>
+            </div>
+            <div class="telas__icon">
+                <img src="./img/computador.png" alt="icone de computador" class="telas">
+                <p class="telas__titulo">Computadores</p>
+            </div>
+            <div class="telas__icon">
+                <img src="./img/celular.png" alt="icone de celular" class="telas">
+                <p class="telas__titulo">Celulares e tablets</p>
+            </div>
         </div>
     </section>
 </body>
