--- a/index.html
+++ b/index.html
@@ -57,17 +57,31 @@
         <div class="telas__grupo">
             <div class="telas__icon">
                 <img src="./img/tv.png" alt="icone de tv" class="telas">
-                <p class="telas__titulo">TV</p>
+                <h3>TV<h3>
             </div>
             <div class="telas__icon">
                 <img src="./img/computador.png" alt="icone de computador" class="telas">
-                <p class="telas__titulo">Computadores</p>
+                <h3>Computadores<h3>
             </div>
             <div class="telas__icon">
                 <img src="./img/celular.png" alt="icone de celular" class="telas">
-                <p class="telas__titulo">Celulares e tablets</p>
+                <h3>Celulares e tablets<h3>
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <img src="./img/Logo.png" alt="logo da alura" class="logo">
+        <div class="informacoes">
+            <a href="#">idioma</a>
+            <a href="#">Dispositivos compatíveis</a>
+            <a href="#">Contrato de assinatura</a>
+            <a href="#">Politica de privacidade</a>
+            <a href="#">Proteção de dados no Brasil</a>
+            <a href="#">Anuncios personalizados</a>
+            <a href="#">Ajuda</a>
+        </div>
+        <p class="direitos">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="direitos">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 </html>
